# blindr

./: .gitignore  README.md  Untitled1.ipynb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
backend/: requirements.txt
backend/app/: app.py  db_connection.py  db_methods.py  models.py
backend/database/: setup_db.py
blind_schnorr/: Cargo.toml
blindr-common/: Cargo.toml
blindr-common/src/: lib.rs
blindr-zk/: Cargo.toml
blindr-zk/methods/: Cargo.toml
blindr-zk/methods/guest/: Cargo.toml
blindr-zk/methods/guest/src/: main.rs
blindr-zk/src/: lib.rs
blindsign/: Cargo.toml
blindsign/src/: keypair.rs  lib.rs  request.rs  session.rs  signature.rs
demo/: Untitled.ipynb
libblindr/: Cargo.toml  compile.sh  compilex86.sh  demo.py
libblindr/src/: lib.rs
node-cess/: package-lock.json  package.json  server.js  tester.js
risc0/: Cargo.toml
risc0/risc0/circuit/recursion/: Cargo.toml  build.rs
risc0/risc0/r0vm/src/: lib.rs
risc0/risc0/zkvm/: Cargo.toml
risc0/risc0/zkvm/src/: lib.rs
risc0/risc0/zkvm/src/host/api/: client.rs  server.rs
sdk/: Untitled1.ipynb  blindr_client.py  blindr_config.py  blindr_driver.py
sdk/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
