[package]
name = "blindr-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "*"
sha2 = { version = "0.10.6" }
# risc0-zkvm = { git = "https://github.com/l2iterative/risc0/", branch="no-rust-runtime-for-host" }
risc0-zkvm = { path = "../risc0/risc0/zkvm" }
serde_json = "1"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
