[package]
name = "blindsign"
version = "0.0.6"
authors = ["boojies"]
repository = "https://github.com/boojies/blindsign"
readme = "README.md"
license = "MIT"
description = "A package for creating blind signatures cryptography ECC"
categories = ["cryptography"]
keywords = ["blind", "signature", "cryptography", "mix", "ECC"]

[dev-dependencies]
sha3 = "0.7.3"

[dependencies]
digest = "0.10"
rand = { version = "0.8", default-features = false, features = ["std_rng", "std"] }
failure = "0.1.1"
failure_derive = "0.1.1"
typenum = "1.10.0"
# subtle = "0.6.2"
subtle = "*"

sha2 = { version = "0.10.6" }
risc0-zkvm = { path = "../risc0/risc0/zkvm" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }

[dependencies.curve25519-dalek]
# version = "^0.17"
version = "*"
# features = ["nightly", "u32_backend"]
features = ["u32_backend"]
default-features = false
