[package]
name = "multiply"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.21.0", default-features = false, features = ["std"]}
sha2 = { version = "0.10.6" }
blindr-common = { path = "../../../blindr-common" }
blindsign = { path = "../../../blindsign" }

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.6-risczero.0" }
